# PredictivePilot

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
rust_part/: README.md
src/: data_conversion.py  linreg.py  main.rs  model_types.py  model_types_test.py  modules.rs
src/data_mod/: data_conversion.py  data_conversion_test.py  determine_datatype.py  determine_datatype_test.py  filetomatrixtest.csv  filetomatrixtest2.txt
