[package]
name = "PredictivePilot"
version = "0.1.0"
edition = "2021"
authors = [
    "Sohum Sharma <sohums3@illinois.edu>", 
    "Daniel Philipov <dp33@illinois.edu>", 
    "Alexandra Levinsheyn <al68@illinois.edu>", 
    "Akshay Vellore <akshayv4@illinois.edu>"
]

rust-version = "1.76.0"

description = "An Applet to assist with choosing the best model for a given dataset."
readme = "README.md"

repository = "https://github.com/sohumsharma484/PredictivePilot"
publish = false

[dependencies]
actix-web = "4.5.1"
async-trait = "0.1.77"
bytes = "1.5.0"
derive_more = "0.99.17"
json = "0.12.4"
serde = "1.0.197"
surrealdb = "1.2.0"
uuid = "1.7.0"
validator = "0.16.1"

