[package]
name = "PredictivePilot"
version = "0.1.0"
edition = "2021"
authors = [
    "Sohum Sharma <sohums3@illinois.edu>", 
    "Daniel Philipov <dp33@illinois.edu>", 
    "Alexandra Levinsheyn <al68@illinois.edu>", 
    "Akshay Vellore <akshayv4@illinois.edu>"
]

rust-version = "1.76.0"

description = "An Applet to assist with choosing the best model for a given dataset."
readme = "README.md"

repository = "https://github.com/sohumsharma484/PredictivePilot"
publish = false

[[bin]]
name = "predictive_pilot"
path = "src/main.rs"

[dependencies]
# Web Framework Dependencies
actix-multipart = "0.6"
actix-web = "4.4"
env_logger = "0.11"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
log = "0.4"
sanitize-filename = "0.5"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1.77"
bytes = "1.5.0"
derive_more = "0.99.17"
json = "0.12.4"
serde = "1.0.197"
validator = "0.16.1"

[lib]
name = "predictive_pilot"
path = "src/lib.rs"

# Integration Dependencies
[dependencies.pyo3]
version = "0.20.2"
features = ["auto-initialize"]

